# PWSA-Star

./: .gitignore  steps.txt
example/: Makefile  array-util.hpp  astar_main.cpp  bin_heap.hpp  filter_scen.py  frontier.cpp  gen_big_random.py  pairing-heap.hpp  pars.hpp  pars_main.cpp  pase_compile.sh  pase_main.cpp  pastar_compile.sh  pebbling  pwsa.cpp  pwsa.hpp  pwsa_main.cpp  reformat_against.py  reformat_compare.py  reformat_plot2.py  run.sh  run_against.py  run_pwsa.py  run_scen.py  sam_bin_heap.hpp  select_algo.py  simple_weighted_2.txt  timing.hpp  treap-frontier.hpp  treap.h  view.py  weighted-graph.hpp  weighted_graph.hpp
example/graphs/: simple_weighted.txt
example/maps/: map_to_pbnf.py  simple_map_3.map
example/maps/mazes/: .swp  map_to_adj.py  small_graph.adj  small_graph_2.map
example/maps/sc1/: complete.map  map_to_adj.py  tiny_opt.adj  tiny_opt.map  very_small.adj
example/myscen/: bgmaps.scen  mazes.scen  random.scen  sc1.scen
example/myscen/main/: AR0602SR.map.big-4.scen-10  Expedition.map.big-4.scen-10  maze512-4-0.map.big-4.scen-10
example/myscen/mazes/: maze512-4-0.map-1.scen  maze512-4-0.map-25.scen
example/myscen/random/: random512-25-0.map.scen  random512-25-2.map.scen
example/myscen/sc1/: AcrosstheCape.map-25.scen  Expedition.big4.map-25.scen  Expedition.map-25.scen
example/other/: cube.txt  pairing-heap.hpp  select_algo.py  treap_main.cpp
example/other/pase/: ScenarioLoader.cpp  pastar_int.cpp
example/results/: astar.txt  generate_plots.sh  pbnf.txt  pwsa.txt  run.sh
example/results/astar/: astar.txt  format.sh
example/results/astar_0/: AcrosstheCape.txt  Expedition.txt  astar.sh  maze512-4-0.txt
example/results/backup/: pbnf.txt
example/results/old/: astar.txt  maze512-4-0-25-wPWSAPC.txt
example/results/old/astar_0/: astar.sh
example/results/old/old/: pc-comparison-acrosscape.txt  pc-comparison-maze512-4-0.txt
example/results/old/pase_1e-5/: Expedition.txt  pase.sh
example/results/old/pase_5e-5/: pase.sh
example/results/old/pbnf_0/: maze512-4-0.txt  random512-25-0.txt
example/results/old/pwsa_old_0/: maze512-4-0.txt
example/results/old/pwsa_old_5e-5/: maze512-4-0.txt  random512-25-0.txt
example/results/pase/: AR0400SR.txt  maze512-4-0.txt
example/results/pase_1e-5/: AcrosstheCape.txt  maze512-4-0.txt  random512-25-0.txt
example/results/pase_5e-5/: AcrosstheCape.txt  random512-25-0.txt
example/results/pbnf/: pbnf.txt
example/results/pbnf_0/: AcrosstheCape.txt  Expedition.txt  maze512-4-0.txt  pbnf.sh
example/results/pwsa_0/: AcrosstheCape.txt  pwsa.sh
example/results/pwsa_5e-5/: AcrosstheCape.txt
example/results/pwsa_old_1e-5/: Expedition.txt  pwsa.sh
example/results/pwsa_old_5e-5/: pwsa.sh
example/results/pwsa_old_5e-5/old/: maze512-4-0.txt
example/results/robot/: pwsa-and-pase.txt  pwsa_times_reformatted.txt  w1.5_runs_reformatted.txt  wastar.txt
example/scripts/: filter_results.py  filter_scen.py  quick_compare_astar.sh  reformat.py  run_pbnf.py  select_algo.py  view.py  visualize_all.py
example/src/: array_util.hpp  astar.hpp  astar_main.cpp  bin_heap.hpp  pase_main.cpp  pastar_main.cpp  pwsa.hpp  pwsa_main.cpp  timing.hpp  wanre.hpp  wanre_main.cpp  weighted_graph.hpp  wpanre.hpp  wpanre_main.cpp
libsbpl/: CMakeLists.txt
libsbpl/src/discrete_space_information/nav2d/: environment_nav2D.cpp
libsbpl/src/include/sbpl/: headers.h
libsbpl/src/include/sbpl/discrete_space_information/: environment.h  environment_precomputed_adjacency_list.h
libsbpl/src/include/sbpl/planners/: array_util.h  lax_utils.h  pARA_constants.h
libsbpl/src/include/sbpl/utils/: sbpl_bfs_3d.h
libsbpl/src/planners/ARAStar/: araplanner.cpp
libsbpl/src/planners/PWSA/: pwsaplanner.cpp
libsbpl/src/planners/pARAStar/: pARA.cpp
libsbpl/src/planners/wASTAR/: wAStar.hpp
libsbpl/src/test/: run.cpp  run_pwsa.cpp
pbnf/src/: Expedition.pbnf_grid  grid_search.cc  grid_search.x86_64  grid_search_sync.x86_64  tiles_search.x86_64  tiles_search_sync.x86_64
pbnf/src/grid/: grid_world.cc  grid_world.h
pbnf/src/lockfree/: atomic_test-x86_64  mem_test-x86_64  ordlist_test-x86_64  prio_queue_test-x86_64  queue_test-x86_64
pwsa_project/PWSA/pasl/: process.py
pwsa_project/PWSA/pasl/minicourse/: dup.hpp  example.cpp  graph.hpp  numeric.hpp  sparray.hpp  string.hpp
pwsa_project/PWSA/pasl/parutil/: barrier.hpp  cldeque.hpp  machine.cpp  pcontainer.hpp  perworker.hpp
pwsa_project/PWSA/pasl/sched/: benchmark.hpp  estimator.cpp  (+10 more)
pwsa_project/PWSA/src/: astar.hpp  pase.hpp
pwsa_project/libsbpl/: CMakeLists.txt  levine_stats.txt
sbpl/: .src.swp  CMakeCache.txt  CMakeLists.txt  run_new.sh  run_old.sh  test_para.sh
sbpl/cmake_build/: .CMakeLists.txt.swo  .CMakeLists.txt.swp  .README.txt.swp  .swp  CMakeCache.txt  CMakeLists.txt  Makefile  README.txt  clean.sh  cmake_install.cmake
sbpl/src/: .planners.swo  .planners.swp
sbpl/src/discrete_space_information/: environment.h
sbpl/src/test/: .run_pwsa.cpp.swp  .swp  main.cpp  run.cpp  run_pwsa.cpp
sbpl/src/utils/: 2Dgridsearch.cpp
sched/: benchmark.hpp  native.hpp
src/: astar.hpp  pase.hpp  pwsa.hpp  wpanre.hpp
src/pase/: pase.hpp
src/pasl/sched/: benchmark.hpp  native.hpp  threaddag.cpp  threaddag.hpp
src/pasl/sequtil/: cmdline.cpp
src/pwsa/: astar.hpp  pwsa-old.hpp  pwsa.hpp  wpanre.hpp
src/shared/: result.hpp  search_utils.hpp  weighted_graph.hpp
test/grid/: Makefile  README  pase_compile.sh  pastar_compile.sh
test/grid/icaps-results/: astar_5e-5.txt
test/grid/maps/: jordan.map  simple_map_2.map
test/grid/myscen/: example.scen
test/grid/other/: hash.hpp  pars_main.cpp  random_scen.py  reformat_plot2.py  run.sh  run_against.py
test/grid/results/: gen_plots.sh  pbbs-r-exptime_0.txt  pbbs-r-exptime_1e-5.txt  pbbs-r-exptime_1e-6.txt  pbbs-r-exptime_5e-5.txt  pbbs-r-exptime_5e-6.txt  run.sh  w1.5_runs_reformatted.txt
test/grid/scripts/: blowup.py  filter_results.py  reformat.py  run_pbnf.py  run_scen.py  select_algo.py
test/grid/src/: grid_main.cpp  my_pase_main.cpp  old_pastar_main.cpp
xytheta/pwsa_project/PWSA/: .gitignore
(+277 files in other folders)
